# web

./: .gitignore  AUDIT_STATUS.md  BUSINESS_LOGIC_AUDIT.md  CUT_LIST.md  DEEP_AUDIT_HUEHUB_UTXOSWAP.md  DEEP_AUDIT_SWAP_FARM_RELAYER.md  DEPLOYMENT_READY.md  FINAL_AUDIT_REPORT.md  FINAL_REPORT.md  FIX_REPORT.md  FULL_AUDIT_REPORT.md  MAINTAINABILITY.md  MISSING_COMPONENTS_SOLUTION.md  NODE_DEEP_AUDIT_REPORT.md  PROJECT_INDEX.md  README.md  REBUILD_MASTER_PLAN.md  REBUILD_PLAN.md  REBUILD_PROGRESS.md  SESSION_REPORT.md  SMART_MONEY_UPGRADE_PLAN.md  STRATEGY_EVALUATION_2026.md  SYSTEM_ANALYSIS.md  TRACK_B_STATUS.md  TRACK_C_STATUS.md  TRADING_LOGIC_REVIEW.md  TRADING_STRATEGY_CODE_REVIEW.md  UNAUDITED_FILES_REPORT.md  UNIPASS_OPENTG_DEEP_AUDIT.md  docker-compose.dev.yml  docker-compose.integration.yml  接下来的工作.md
backend-rust/apple-public-key-monitor-oss/: Cargo.toml  Dockerfile  README.md
backend-rust/apple-public-key-monitor-oss/src/: apple.rs  config.rs  lib.rs  main.rs  runner.rs  slack.rs  state.rs
backend-rust/apple-public-key-monitor-oss/tests/: integration.rs
backend-rust/asset-migrator-oss/: Cargo.toml  Dockerfile  README.md
backend-rust/asset-migrator-oss/migrations/: 20240101000001_initial.sql
backend-rust/asset-migrator-oss/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  mq.rs
backend-rust/asset-migrator-oss/src/api/: mod.rs
backend-rust/asset-migrator-oss/src/daos/: coin_info.rs  deposit_address.rs  deposit_event.rs  inbound_transaction.rs  mod.rs  outbound_transaction.rs  tx_activity.rs
backend-rust/asset-migrator-oss/src/services/: custody_wallet.rs  deposit_address.rs  mod.rs
backend-rust/asset-migrator-oss/src/workers/: deposit_indexer.rs  mod.rs  submitter.rs  tx_processor.rs
backend-rust/denver-airdrop-rs-oss/: Cargo.toml  Dockerfile  README.md
backend-rust/denver-airdrop-rs-oss/src/: airdrop.rs  block_range.rs  config.rs  dedup.rs  error.rs  lib.rs  logger.rs  main.rs  statefile.rs
backend-rust/dexauto-trading-server/: Cargo.toml  SECURITY_AUDIT_REPORT.md
backend-rust/dexauto-trading-server/crates/api/: Cargo.toml
backend-rust/dexauto-trading-server/crates/api-common/: Cargo.toml
backend-rust/dexauto-trading-server/crates/cpis/: Cargo.toml
backend-rust/dexauto-trading-server/crates/entity/: Cargo.toml
backend-rust/dexauto-trading-server/crates/tx-builder/: Cargo.toml
backend-rust/dexauto-trading-server/crates/utils/: Cargo.toml
backend-rust/dexauto-trading-server/src/: config.rs  main.rs
backend-rust/dkim-and-open-id-monitor-oss/: Cargo.toml  Dockerfile  README.md
backend-rust/dkim-and-open-id-monitor-oss/src/: chain_log.rs  config.rs  dkim_dns.rs  error.rs  jwks.rs  lib.rs  main.rs  reconciler.rs  slack.rs
backend-rust/huehub-observability/: Cargo.toml
backend-rust/huehub-observability/src/: errors.rs  health.rs  lib.rs  logs.rs  metrics.rs
backend-rust/huehub-observability/tests/: smoke.rs
backend-rust/huehub-rgbpp-indexer-oss/: Cargo.toml  Dockerfile  README.md  config.dev.json
backend-rust/huehub-rgbpp-indexer-oss/src/: config.rs  dao.rs  error.rs  lib.rs  main.rs  pagination.rs  redb_dao.rs  rpc.rs  types.rs
backend-rust/huehub-security-middleware/: Cargo.toml  README.md
backend-rust/huehub-security-middleware/src/: audit.rs  lib.rs  rate_limit.rs  request_id.rs
backend-rust/huehub-security-middleware/tests/: integration_template.rs  middleware.rs
backend-rust/huehub-token-distributor/: Cargo.toml
backend-rust/huehub-token-distributor/crates/backend-daos/: Cargo.toml
backend-rust/huehub-token-distributor/crates/distributor-daos/: Cargo.toml
backend-rust/huehub-token-distributor/crates/distributor-types/: Cargo.toml
backend-rust/huehub-token-distributor/src/: ckb_tx.rs  main.rs  security.rs
backend-rust/paymaster-service-oss/: Cargo.toml  Dockerfile  README.md  config.dev.json
backend-rust/paymaster-service-oss/src/: config.rs  lib.rs  main.rs  paymaster.rs  rpc.rs  user_operation.rs
backend-rust/paymaster-service-oss/tests/: integration.rs
backend-rust/payment-server/: BUSINESS_LOGIC_AUDIT.md  Cargo.toml  DEEP_AUDIT_UNAUDITED_FILES.md  SECURITY_AUDIT.md
backend-rust/payment-server/crates/api/: Cargo.toml
backend-rust/payment-server/crates/api-utils/: Cargo.toml
backend-rust/payment-server/crates/app-redis/: Cargo.toml
backend-rust/payment-server/crates/common/: Cargo.toml
backend-rust/payment-server/crates/config/: Cargo.toml
backend-rust/payment-server/src/: main.rs
backend-rust/trading-tracker-oss/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  config.example.toml  docker-compose.example.yml
backend-rust/trading-tracker-oss/src/: config.rs  cursor_store.rs  error.rs  lib.rs  logger.rs  main.rs  package.rs  pb.rs  rpc.rs
backend-rust/trading-tracker-oss/tests/: integration.rs
backend-rust/tss-ecdsa-server/: Cargo.toml  UPSTREAM.md
backend-rust/tss-ecdsa-server/src/: main.rs
backend-rust/unipass-bridge-validator/: Cargo.toml  SECURITY_AUDIT.md
backend-rust/unipass-bridge-validator/src/: main.rs
backend-rust/unipass-snap-service-oss/: Cargo.toml  Dockerfile  README.md  config.dev.json
backend-rust/unipass-snap-service-oss/migrations/: 20240101000001_initial.sql
backend-rust/unipass-snap-service-oss/src/: auth.rs  common.rs  config.rs  contract.rs  error.rs  lib.rs  main.rs  mq.rs  sigverify.rs
backend-rust/unipass-wallet-relayer/: Cargo.toml
backend-rust/unipass-wallet-relayer/src/: main.rs  security.rs
backend-rust/unipass-wallet-zk-server-oss/: Cargo.toml  Dockerfile  README.md
backend-rust/unipass-wallet-zk-server-oss/migrations/: 20240101000001_initial.sql
backend-rust/unipass-wallet-zk-server-oss/src/: config.rs  error.rs  lib.rs  main.rs  mq.rs  prover.rs  scheduler.rs  types.rs
backend-rust/utxo-swap-sequencer/: .env.example  BUSINESS_LOGIC_AUDIT.md  Cargo.toml  Dockerfile  SECURITY_AUDIT.md
backend-rust/utxo-swap-sequencer/src/: config.rs  main.rs
backend-rust/utxoswap-farm-sequencer/: Cargo.toml
backend-rust/utxoswap-farm-sequencer/src/: config.rs  main.rs  security.rs
(+2472 files in other folders)
