[package]
name = "apple-public-key-monitor-oss"
version = "0.1.0"
edition = "2021"
description = "Open-source rewrite of the closed-source `apple-public-key-monitor` ELF. Polls https://appleid.apple.com/auth/keys and Slack-notifies on key-set change."
license = "MIT OR Apache-2.0"

[[bin]]
name = "apple-public-key-monitor"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
thiserror  = "1"
# Use the `rustls-tls` backend — matches what most modern Linux images ship
# without needing libssl, and keeps the static binary self-contained.
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "fs"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto       = true
opt-level = 3
strip     = "debuginfo"
codegen-units = 1
