[package]
name = "asset-migrator-oss"
version = "0.1.0"
edition = "2021"
description = "Open-source rewrite of the closed-source `unipass_asset_migrator` ELF — cross-chain asset migration service (inbound deposits → custody wallet signing → outbound transfers)."
license = "MIT OR Apache-2.0"

[[bin]]
name = "asset-migrator"
path = "src/main.rs"

[dependencies]
# Core runtime
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "sync", "fs"] }
anyhow     = "1"
thiserror  = "1"

# HTTP server — actix-web to match the closed-source binary's recovered stack
actix-web       = "4"
actix-cors      = "0.7"
actix-http      = "3"

# HTTP client (outbound to custody wallet & chain RPCs)
reqwest             = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
reqwest-middleware  = "0.3"
reqwest-retry       = "0.6"

# Database — sqlx with MySQL matches the recovered binary's ORM choice
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono", "bigdecimal", "migrate"] }

# Cache / queue
deadpool-redis = "0.18"
redis          = { version = "0.27", features = ["tokio-comp", "streams"] }

# EVM
ethers-core      = "2"
ethers-providers = "2"
ethers-signers   = "2"

# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }

# (de)serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Helpers
chrono      = { version = "0.4", features = ["serde"] }
bigdecimal  = { version = "0.4", features = ["serde"] }
hex         = { version = "0.4", features = ["serde"] }
dotenvy     = "0.15"
futures     = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile       = "3"
wiremock       = "0.6"
pretty_assertions = "1"

[profile.release]
lto           = true
opt-level     = 3
strip         = "debuginfo"
codegen-units = 1
