[package]
name = "denver-airdrop-rs-oss"
version = "0.1.0"
edition = "2021"
description = "Open-source rewrite of the closed-source `denver-airdrop-rs` ELF — EVM NFT airdrop monitor + distributor."
license = "MIT OR Apache-2.0"

[[bin]]
name = "denver-airdrop-rs"
path = "src/main.rs"

[dependencies]
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "sync", "fs"] }
anyhow     = "1"
thiserror  = "1"
async-trait = "0.1"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
hex        = { version = "0.4", features = ["serde"] }

tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
dotenvy             = "0.15"

ethers = { version = "2", default-features = false, features = ["rustls"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto           = true
opt-level     = 3
strip         = "debuginfo"
codegen-units = 1
