[workspace]
members = [
    "crates/api",
    "crates/api-common",
    "crates/cpis",
    "crates/entity",
    "crates/tx-builder",
    "crates/utils",
]

[workspace.package]
version = "1.0.4"
edition = "2021"

[workspace.dependencies]
actix-web = "4"
actix-cors = "0.7"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
bs58 = "0.5"
bincode = "1"
solana-sdk = "2"
solana-client = "2"
solana-transaction-status = "2"

[package]
name = "dexauto-trading-server"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
sea-orm.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
bs58.workspace = true
envy = "0.4"

api = { path = "crates/api" }
api-common = { path = "crates/api-common" }
entity = { path = "crates/entity" }
utils = { path = "crates/utils" }
