[package]
name = "dkim-and-open-id-monitor-oss"
version = "0.1.0"
edition = "2021"
description = "Open-source rewrite of the closed-source `dkim-and-open-id-monitor` ELF — monitors DKIM TXT records and OIDC JWKs against an on-chain log, alerts via Slack on divergence."
license = "MIT OR Apache-2.0"

[[bin]]
name = "dkim-and-open-id-monitor"
path = "src/main.rs"

[dependencies]
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "sync"] }
anyhow     = "1"
thiserror  = "1"
async-trait = "0.1"

reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
hex        = { version = "0.4", features = ["serde"] }
base64     = "0.22"
sha2       = "0.10"
tiny-keccak = { version = "2", features = ["keccak"] }

chrono = { version = "0.4", features = ["serde"] }

tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
dotenvy             = "0.15"

# Optional (gated behind build in impl modules, but used in the binary)
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime", "system-config"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto           = true
opt-level     = 3
strip         = "debuginfo"
codegen-units = 1
