[package]
name        = "huehub-security-middleware"
version     = "0.1.0"
edition     = "2021"
description = "Shared actix-web middleware for rate-limiting, audit logging and request-ID propagation used across huehub/unipass Rust services."
license     = "MIT OR Apache-2.0"

[dependencies]
# Web framework — actix-web is the common denominator across our Rust fleet.
actix-web       = "4"
actix-governor  = "0.5"
governor        = "0.6"

# Request-ID / logging
uuid            = { version = "1", features = ["v4", "serde"] }
chrono          = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tracing         = "0.1"

# (de)serialisation
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

# Async primitives for audit-log sinks.
tokio           = { version = "1", features = ["sync", "fs", "io-util", "rt", "macros"] }
futures-util    = "0.3"
thiserror       = "1"

[dev-dependencies]
# Integration tests run the middleware end-to-end against an in-memory server.
actix-rt        = "2"
tempfile        = "3"

[features]
default     = []
# Optional S3-compatible audit sink. Off by default so the crate stays dep-light;
# downstream services opt in when they run in production.
s3-sink     = ["dep:aws-sdk-s3", "dep:aws-config"]

[dependencies.aws-sdk-s3]
version  = "1"
optional = true

[dependencies.aws-config]
version  = "1"
optional = true
