[workspace]
members = [
    "crates/backend-daos",
    "crates/distributor-daos",
    "crates/distributor-types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
actix-web = "4"
sea-orm = { version = "0.12.15", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[package]
name = "huehub-token-distributor"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
actix-cors = "0.7"
sea-orm.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
hex.workspace = true
envy = "0.4"
reqwest.workspace = true
secp256k1 = { version = "0.29", features = ["recovery"] }
blake2b_simd = "1"
bech32 = "0.11"

backend-daos = { path = "crates/backend-daos" }
distributor-daos = { path = "crates/distributor-daos" }
distributor-types = { path = "crates/distributor-types" }
