[workspace]
members = [
    "crates/api",
    "crates/api-utils",
    "crates/app-redis",
    "crates/common",
    "crates/config",
    "crates/custom-auth-core",
    "crates/daos",
    "crates/logger",
    "crates/payment-contracts",
    "crates/smart-account-wallet",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
actix-web = "4"
actix-cors = "0.7"
sea-orm = { version = "0.12.15", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
ethers = { version = "2", features = ["legacy", "ws"] }
ethers-contract = "2"
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
deadpool-redis = "0.18"
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }

[package]
name = "payment-server"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
sea-orm.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
deadpool-redis.workspace = true
envy = "0.4"

api = { path = "crates/api" }
api-utils = { path = "crates/api-utils" }
common = { path = "crates/common" }
config = { path = "crates/config" }
daos = { path = "crates/daos" }
logger = { path = "crates/logger" }
