[package]
name = "unipass-snap-service-oss"
version = "0.1.0"
edition = "2021"
description = "Open-source rewrite of the closed-source `unipass-snap-service/snap-server` ELF — UniPass Snap backend (account provisioning + free-quota tx relayer)."
license = "MIT OR Apache-2.0"

[[bin]]
name = "snap-server"
path = "src/main.rs"

[dependencies]
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "sync", "fs"] }
anyhow     = "1"
thiserror  = "1"

# HTTP + JWT
actix-web       = "4"
actix-cors      = "0.7"
jsonwebtoken    = "9"

# DB + cache
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono", "bigdecimal", "migrate"] }
deadpool-redis = "0.18"
redis          = { version = "0.27", features = ["tokio-comp"] }

# EVM
ethers-core      = "2"
ethers-providers = "2"
ethers-signers   = "2"

# HTTP client for relayer / apollo
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.3"
reqwest-retry      = "0.6"

# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
chrono     = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
hex        = { version = "0.4", features = ["serde"] }
dotenvy    = "0.15"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto           = true
opt-level     = 3
strip         = "debuginfo"
codegen-units = 1
