[package]
name = "unipass-wallet-zk-server-oss"
version = "0.1.0"
edition = "2021"
description = "Open-source rewrite of the closed-source `unipass-wallet-zk-server` ELF — zk-email PLONK proof generation HTTP service."
license = "MIT OR Apache-2.0"

[[bin]]
name = "unipass-wallet-zk-server"
path = "src/main.rs"

[dependencies]
tokio      = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "sync"] }
anyhow     = "1"
thiserror  = "1"

# HTTP
actix-web   = "4"
actix-cors  = "0.7"

# DB + Redis stream
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
deadpool-redis = "0.18"

# Serde
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", features = ["serde"] }
hex        = { version = "0.4", features = ["serde"] }

# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }

# Config loader
dotenvy    = "0.15"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto           = true
opt-level     = 3
strip         = "debuginfo"
codegen-units = 1
