[package]
name = "api-common"
version.workspace = true
edition.workspace = true
[dependencies]
actix-web.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
bs58.workspace = true
entity = { path = "../entity" }
