[package]
name = "config"
version.workspace = true
edition.workspace = true
[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
hex.workspace = true
envy = "0.4"
tracing.workspace = true
ethers = { version = "2", features = ["legacy", "ws"] }
