[package]
name = "validator-handler"
version.workspace = true
edition.workspace = true
[dependencies]
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
hex.workspace = true
reqwest.workspace = true
sha3.workspace = true
sea-orm.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
thiserror.workspace = true
chrono.workspace = true
api = { path = "../api" }
contracts-abi = { path = "../contracts-abi" }
validator-daos = { path = "../validator-daos" }
validator-signer = { path = "../validator-signer" }
