[package]
name = "validator-monitor"
version.workspace = true
edition.workspace = true
[dependencies]
ethers.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
hex.workspace = true
sha3.workspace = true
sea-orm.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
api = { path = "../api" }
validator-daos = { path = "../validator-daos" }
validator-handler = { path = "../validator-handler" }
